# mob_man_mot_plan

./: .gitignore  CMakeLists.txt  package.xml  workspace_test.code-workspace
action/: PoseTrajectory.action
data/: col_dist.csv  joint_pos.csv  joint_vel.csv  manip.csv  pose_error.csv  time.csv
include/mars_mot_plan/: MarsUR5.h  PolynomInterp.h  Quat.h
include/mars_mot_plan/kinematics/: DualQuat.h  MarsUR5.h  PadenKahan.h  Pose.h  Quat.h
include/mars_mot_plan/traj_plan/: CircleWavePathTrajectory.h  EllipticPathTraj.h  EllipticPathTrajectory.h  LinePathTrajectory.h  LissajousPathTrajectory.h  PoseIterTrajectory.h  PoseTrajectory.h  SineWavePathTrajectory.h  TrajPlan.h  Trajectory.h
launch/: ee_marker.launch  exp_server.launch  exp_server_circle.launch  mars_mot_plan_sim.launch  sim_server.launch  sim_server_circle.launch  sim_server_sin_wave.launch  vivefb_exp_server.launch
scripts/: test.py
src/: ee_goal_marker.cpp  mars_mot_plan_exp_server.cpp  mars_mot_plan_exp_server_circle.cpp  mars_mot_plan_exp_server_sine_wave.cpp  mars_mot_plan_sim_server.cpp  mars_mot_plan_sim_server_circle.cpp  mars_mot_plan_sim_server_sine_wave.cpp  mars_mot_plan_vivefb_server.cpp  mobman_mot_plan.cpp  mobman_mot_plan_exp.cpp  mobman_mot_plan_sim.cpp  nmm_mot_plan_circle_sim.cpp  nmm_mot_plan_sim_ellip.cpp  nmm_mot_plan_sim_ellip_iter.cpp  nmm_mot_plan_sim_iter.cpp
src/kinematics/: DualQuat.cpp  MarsJacobians.cpp  MarsUR5.cpp  PadenKahan.cpp  PolynomInterp.cpp  Pose.cpp  Quat.cpp
src/traj_plan/: CircleWavePathTrajectory.cpp  EllipticPathTraj.cpp  EllipticPathTrajectory.cpp  LinePathTrajectory.cpp  LissajousPathTrajectory.cpp  PoseIterTrajectory.cpp  PoseTrajectory.cpp  SineWavePathTrajectory.cpp  TrajPlan.cpp  Trajectory.cpp
